# flock_analyzer

./: .clang-format  .editorconfig  .gitignore  LICENSE  README.md
deep_learning/flock_analyzer/: README.md  flock_analyzer_inference_ViT.py  requirements.txt
deep_learning/flock_analyzer/models/: nodecheck.py
deep_learning/flock_analyzer/train_flock_analyzer/: analyzer_Training_Steps.txt  dummy_generator_for_pattern_input.py  export_vit_to_onnx.py  train_flock_analyzer_ViT.py
docs/: README.md
docs/design/: README.md  autonomy_stack_design.md  deterrence_logic_design.md  perception_module_design.md  system_architecture.md
docs/developer_guides/: README.md  getting_started.md
docs/user_manuals/: README.md  operating_guide.md  troubleshooting.md
ros/src/skyautonet/bird_repellent_system/bird_camera/: .CMakeLists.txt  .package.xml
ros/src/skyautonet/bird_repellent_system/bird_camera/launch/: zoom_control_launch.py
ros/src/skyautonet/bird_repellent_system/bird_camera/src/: zoom_contro_backl.cpp  zoom_control.cpp
ros/src/skyautonet/bird_repellent_system/bird_detector/: CMakeLists.txt  package.xml
ros/src/skyautonet/bird_repellent_system/bird_detector/config/: default.config.yaml
ros/src/skyautonet/bird_repellent_system/bird_detector/include/: bird_detector.hpp
ros/src/skyautonet/bird_repellent_system/bird_detector/launch/: bird_detector.launch.xml
ros/src/skyautonet/bird_repellent_system/bird_detector/libs/detection_processor/: CMakeLists.txt
ros/src/skyautonet/bird_repellent_system/bird_detector/libs/detection_processor/include/: detection_processor.hpp
ros/src/skyautonet/bird_repellent_system/bird_detector/libs/detection_processor/src/: detection_processor.cpp
ros/src/skyautonet/bird_repellent_system/bird_detector/libs/flock_analyzer_hailo/: CMakeLists.txt
ros/src/skyautonet/bird_repellent_system/bird_detector/libs/flock_analyzer_hailo/include/: flock_analyzer.hpp  formation_classifier.hpp
ros/src/skyautonet/bird_repellent_system/bird_detector/libs/flock_analyzer_hailo/src/: flock_analyzer.cpp  flock_analyzer_node.cpp  formation_classifier.cpp
ros/src/skyautonet/bird_repellent_system/bird_detector/libs/hailo_helper/: CMakeLists.txt
ros/src/skyautonet/bird_repellent_system/bird_detector/libs/hailo_helper/include/: hailo_helper.hpp  hailo_infos.hpp
ros/src/skyautonet/bird_repellent_system/bird_detector/libs/hailo_helper/src/: hailo_inference_engine.cpp
ros/src/skyautonet/bird_repellent_system/bird_detector/libs/object_detector/: CMakeLists.txt
ros/src/skyautonet/bird_repellent_system/bird_detector/libs/object_detector/include/: object_detector.hpp
ros/src/skyautonet/bird_repellent_system/bird_detector/libs/object_detector/src/: yolov5.cpp
ros/src/skyautonet/bird_repellent_system/bird_detector/nodes/: bird_detector_node.cpp
ros/src/skyautonet/bird_repellent_system/bird_detector/src/: bird_detector.cpp
ros/src/skyautonet/bird_repellent_system/bird_repellent_msgs/: CMakeLists.txt  package.xml
ros/src/skyautonet/bird_repellent_system/bird_repellent_msgs/msg/: BoundingBox2d.msg  DetectedObject.msg  DetectedObjects.msg  Direction.msg  FlockAnalysis.msg  PanTiltCommand.msg  PanTiltControlMode.msg  PanTiltPose.msg  SpeakerCommand.msg
